font weight and size are fixes along with spacing

--- a/src/assets/css/website/_connect-account.scss
+++ b/src/assets/css/website/_connect-account.scss
@@ -1,20 +1,29 @@
 .credentials-wrapper.connect-wrap {
-  padding-bottom: 183px;
+  padding-bottom: 150px;
 }
 .credentials-content.connect-account .connect-account-btn {
   height: 48px;
   width: 100%;
   display: block;
   margin-bottom: 40px;
+  font-weight: bold;
+  font-size: 0.875rem;
 
   @media (min-width: $md) {
     width: 236px;
   }
 }
 
+.zillow-wrap {
+  button{
+    margin-right: 40px;
+  }
+}
+
 span.manual-heading {
   color: $darkGray;
   font-size: 1rem;
+  font-weight: 600;
 }
 .credentials-content.connect-account .manual-account-btn {
   height: 48px;
